--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -13,7 +13,10 @@
     "pages/sumRecord/index",
     "pages/sumRecordResult/index",
     "pages/map/map",
-    "pages/chooseCoreChar/chooseCoreChar"
+    "pages/chooseCoreChar/chooseCoreChar",
+    "pages/placeInfo/index",
+    "pages/personInfo/index",
+    "pages/personAchievement/index"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
