--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -13,7 +13,8 @@
     "pages/sumRecord/index",
     "pages/sumRecordResult/index",
     "pages/map/map",
-    "pages/chooseCoreChar/chooseCoreChar"
+    "pages/chooseCoreChar/chooseCoreChar",
+    "pages/placeAchievement/placeAchievement"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
