--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -16,7 +16,8 @@
     "pages/chooseCoreChar/chooseCoreChar",
     "pages/placeInfo/index",
     "pages/personInfo/index",
-    "pages/personAchievement/index"
+    "pages/personAchievement/index",
+    "pages/personPlaces/index"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
