--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -21,7 +21,8 @@
     "pages/personPlaces/index",
     "pages/charMap/index",
     "pages/showAssociation/index",
-    "pages/menu/index"
+    "pages/menu/index",
+    "pages/association/index"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
