--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -22,7 +22,9 @@
     "pages/charMap/index",
     "pages/showAssociation/index",
     "pages/menu/index",
-    "pages/association/index"
+    "pages/association/index",
+    "pages/end/index",
+    "pages/start/index"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
